--- a/Cargo.toml
+++ b/Cargo.toml
@@ -22,5 +22,7 @@ serde_derive = { version = "1.0", optional = true }
 cfg-if = "0.1"
 
 [features]
+default = ["use_std"]
+use_std = []
 doc = []
 with-serde = ["serde", "serde_derive"]
